--- a/_modules.yml
+++ b/_modules.yml
@@ -1,5 +1,13 @@
 config:
   vars:
+    - name: VERSION
+      value: '4.3.17'
+    - name: REDHAT_DOWNLOAD_OC_PORTAL_URL
+      desc: URL for Red Hat portal oc binary download
+      value: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/
+    - name: API_URL
+      desc: URL to API server
+      value: https://api.cluster-4c7b.sandbox575.opentlc.com:6443
     - name: DEFAULT_PASSWORD
       desc: Default password for users in the environment
       value: openshift
@@ -12,16 +20,10 @@ config:
     - name: GET_STARTED_CLI_URL
       desc: URL to documentation to configure CLI
       value: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/
-    - name: API_URL
-      desc: URL to API server
-      value: https://api.cluster-4c7b.sandbox575.opentlc.com:6443
     - name: NEXUS_URL
       desc: URL to Nexus repository
       value: http://nexus-workshop.apps.experian-fbef.openshiftworkshop.com/repository/maven-public/
-    - name: REDHAT_DOWNLOAD_OC_PORTAL_URL
-      desc: URL for Red Hat portal oc binary download
-      value: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/
-        
+
   modules:
     0-setting-up-client-tools:
       name: Setting up OpenShift client tools
