--- a/_modules.yml
+++ b/_modules.yml
@@ -1,29 +1,8 @@
 config:
-  vars:
-    - name: DEFAULT_PASSWORD
-      desc: Default password for users in the environment
-      value: openshift4
-    - name: VERSION
-      desc: Version is used
-      value: 4.3.17
-    - name: CONSOLE_ADDRESS
-      desc: HTTP address of the OpenShift console
-      value: https://console-openshift-console.apps.cluster-8f8a.sandbox1118.opentlc.com/
-    - name: APPS_ADDRESS
-      desc: HTTP address suffix of apps deployed on OpenShift
-      value: apps.cluster-8f8a.sandbox1118.opentlc.com/
-    - name: GET_STARTED_CLI_URL
-      desc: URL to documentation to configure CLI
-      value: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/
-    - name: API_URL
-      desc: URL to API server
-      value: https://api.cluster-8f8a.sandbox1118.opentlc.com:6443
-    - name: REDHAT_DOWNLOAD_OC_PORTAL_URL
-      desc: URL for Red Hat portal oc binary download
-      value: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/
+  renderer: asciidoc
 
 modules:
   0-setting-up-client-tools:
-    name: Set up on your Local environment
+    name: Client Tools
   01-verify-connectivity:
-    name: Verify Connectivity
+    name: Verify connectivity
