--- a/_modules.yml
+++ b/_modules.yml
@@ -5,4 +5,6 @@ modules:
   0-setting-up-client-tools:
     name: Client Tools
   01-verify-connectivity:
-    name: Verify connectivity
+    name: Verify Connectivity
+  10-install:
+    name: Installing Workspaces
