initial version of intstall

--- a/_modules.yml
+++ b/_modules.yml
@@ -6,3 +6,5 @@ modules:
     name: Client Tools
   01-verify-connectivity:
     name: Verify Connectivity
+  10-install:
+    name: Install Workspaces
