--- a/_modules.yml
+++ b/_modules.yml
@@ -8,3 +8,5 @@ modules:
     name: Verify Connectivity
   10-install:
     name: Install Workspaces
+  11-console-link:
+    name: Link to CodeReady
