--- a/_modules.yml
+++ b/_modules.yml
@@ -10,6 +10,14 @@ modules:
     name: Install CodeReady Workspaces
   11-console-link:
     name: Link to CodeReady Workspaces
+  11-install-db:
+    name: Database Operator
+  12-assign-limit-ranges-and-quotas:
+    name: Limit Ranges and Quotas
+  13-monitoring-usage:
+    name: monitoring
+  14-admin-dev-console:
+    name: developer console
   50-dev-access:
     name: Developer Access
   51-getting-started:
