--- a/_modules.yml
+++ b/_modules.yml
@@ -6,6 +6,8 @@ modules:
     name: Client Tools
   01-verify-connectivity:
     name: Verify Connectivity
+  14-admin-dev-console:
+    name: Admin and Developer Console
   10-install:
     name: Install CodeReady Workspaces
   11-console-link:
@@ -15,9 +17,7 @@ modules:
   12-assign-limit-ranges-and-quotas:
     name: Limit Ranges and Quotas
   13-monitoring-usage:
-    name: monitoring
-  14-admin-dev-console:
-    name: Developer Console
+    name: Monitoring
   50-dev-access:
     name: Developer Access
   51-getting-started:
