--- a/_modules.yml
+++ b/_modules.yml
@@ -25,4 +25,4 @@ modules:
   51-getting-started:
     name: Getting Started in the IDE
   52-sharing:
-    name: Workspace sharing
+    name: Workspace Sharing
