--- a/devfile.yml
+++ b/devfile.yml
@@ -6,6 +6,10 @@ projects:
       source:
         location: 'https://github.com/1redhat/crw-fruit-service.git'
         type: git
+    - name: legume-service
+      source:
+        location: 'https://github.com/1redhat/crw-legume-service.git'
+        type: git
 components:
   - id: redhat/quarkus-java11/latest
     type: chePlugin
@@ -21,6 +25,14 @@ components:
         port: 8080
         attributes:
           path: /fruits.html
+      - name: legumes-endpoint
+        port: 8080
+        attributes:
+          path: /legumes
+      - name: legumes-ui
+        port: 8080
+        attributes:
+          path: /legumes.html          
     memoryLimit: 512Mi
     type: dockerimage
     volumes:
@@ -40,18 +52,30 @@ components:
       - value: $(JAVA_OPTS)
         name: MAVEN_OPTS
 commands:
-  - name: Package the application
+  - name: Package the fruit
     actions:
       - workdir: '${CHE_PROJECTS_ROOT}/fruit-service'
         type: exec
         command: mvn package
         component: maven
-  - name: Start Quarkus in devmode (hot deploy + debug)
+  - name: Start fruit in devmode (hot deploy + debug)
     actions:
       - workdir: '${CHE_PROJECTS_ROOT}/fruit-service'
         type: exec
         command: 'mvn compile quarkus:dev'
         component: maven
+  - name: Package the legume
+    actions:
+      - workdir: '${CHE_PROJECTS_ROOT}/legume-service'
+        type: exec
+        command: mvn package
+        component: maven
+  - name: Start legume in devmode (hot deploy + debug)
+    actions:
+      - workdir: '${CHE_PROJECTS_ROOT}/legume-service'
+        type: exec
+        command: 'mvn compile quarkus:dev'
+        component: maven        
   - name: Attach remote debugger
     actions:
       - referenceContent: |
