--- a/_modules.yml
+++ b/_modules.yml
@@ -26,3 +26,5 @@ modules:
     name: Getting Started in the IDE
   52-sharing:
     name: Workspace Sharing
+  53-devfile:
+    name: Project Configuration
