Adding plugin modules.

--- a/_modules.yml
+++ b/_modules.yml
@@ -28,3 +28,9 @@ modules:
     name: Workspace Sharing
   53-devfile:
     name: Project Configuration
+  60-plugins-getting-started:
+    name: Introduction to Plugins
+  61-plugins-vscode-extensions:
+    name: Porting Visual Studio Extensions
+  62-plugins-plugin-registry:
+    name: External Plugin Registry
