finishing touches on devfile

--- a/_crw_workshop.yml
+++ b/_crw_workshop.yml
@@ -10,6 +10,7 @@ vars:
   REDHAT_DOWNLOAD_OC_PORTAL_URL: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/"
   API_URL: "https://api.cluster-8f8a.sandbox1118.opentlc.com:6443"
   CONSOLE_ADDRESS: "https://console-openshift-console.apps.cluster-8f8a.sandbox1118.opentlc.com"
+  CODE_READY_HOST: "http://codeready-codeready.apps.cluster-8f8a.sandbox1118.opentlc.com"
   PRODUCT_NAME  : "CodeReady Workspaces"
 
 modules:
